--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.6.1",
@@ -20,7 +21,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
+    "next": "^13.4.4-canary.10",
     "next-remove-imports": "^1.0.11",
     "postcss": "8.4.23",
     "react": "18.2.0",
