--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.22.0",
