--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-helpers-react": "^0.4.0",
+    "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/supabase-js": "^2.25.0",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
