--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "gpt-tokenizer": "^2.1.1",
-    "next": "^13.4.4-canary.10",
+    "next": "^13.4.7",
     "next-remove-imports": "^1.0.11",
     "postcss": "8.4.23",
     "react": "18.2.0",
